[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/efeitos/scene_transition.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/config.gd" type="Script" id=9]
[ext_resource path="res://fonts/BebasNeue-Regular.otf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.419608, 0.454902, 0.698039, 1 )
grow_begin = 0.0
grow_end = -4.0
thickness = 6

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0.258824, 0.298039, 0.431373, 1 )
grow_begin = 0.0
grow_end = 4.0
thickness = 6

[sub_resource type="StyleBoxLine" id=8]
color = Color( 0.258824, 0.298039, 0.431373, 1 )
grow_begin = 0.0
grow_end = 4.0
thickness = 6

[sub_resource type="Theme" id=9]

[sub_resource type="Theme" id=10]

[sub_resource type="StyleBoxLine" id=11]
color = Color( 0.419608, 0.454902, 0.698039, 1 )
grow_begin = 0.0
grow_end = -4.0
thickness = 6

[sub_resource type="StyleBoxLine" id=12]
color = Color( 0.258824, 0.298039, 0.431373, 1 )
grow_begin = 0.0
grow_end = 4.0
thickness = 6

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.258824, 0.298039, 0.431373, 1 )
grow_begin = 0.0
grow_end = 4.0
thickness = 6

[sub_resource type="Theme" id=14]

[sub_resource type="Theme" id=15]

[sub_resource type="StyleBoxLine" id=16]
color = Color( 0.419608, 0.454902, 0.698039, 1 )
grow_begin = 0.0
grow_end = -4.0
thickness = 6

[sub_resource type="StyleBoxLine" id=17]
color = Color( 0.258824, 0.298039, 0.431373, 1 )
grow_begin = 0.0
grow_end = 4.0
thickness = 6

[sub_resource type="StyleBoxLine" id=18]
color = Color( 0.258824, 0.298039, 0.431373, 1 )
grow_begin = 0.0
grow_end = 4.0
thickness = 6

[node name="config" type="Node2D"]
script = ExtResource( 9 )

[node name="hud" type="Node2D" parent="."]

[node name="scene_transition" parent="hud" instance=ExtResource( 8 )]
visible = false

[node name="settings" type="Label" parent="hud"]
visible = false
margin_left = 69.7027
margin_top = 11.4054
margin_right = 115.703
margin_bottom = 31.4054
custom_fonts/font = SubResource( 1 )
text = "settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fundo" type="Node2D" parent="."]

[node name="Label3" type="Label" parent="fundo"]
margin_left = 66.2997
margin_top = 99.8649
margin_right = 120.3
margin_bottom = 119.865
custom_fonts/font = SubResource( 3 )
text = "musics stages"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="fundo"]
margin_left = 66.3
margin_top = 126.741
margin_right = 113.3
margin_bottom = 146.741
custom_fonts/font = SubResource( 3 )
text = "SFX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="fundo"]
margin_left = 66.3
margin_top = 155.063
margin_right = 120.3
margin_bottom = 175.063
custom_fonts/font = SubResource( 3 )
text = "master sound"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = -2.00226
margin_top = 34.7058
margin_right = 37.9977
margin_bottom = 74.7058
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conteiner2" type="HBoxContainer" parent="Control"]
margin_left = 54.6349
margin_top = 79.2696
margin_right = 133.635
margin_bottom = 157.269
theme = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Musica" type="HSlider" parent="Control/conteiner2"]
margin_right = 79.0
margin_bottom = 16.0
size_flags_horizontal = 3
theme = SubResource( 5 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conteiner3" type="HBoxContainer" parent="Control"]
margin_left = 54.635
margin_top = 106.112
margin_right = 133.634
margin_bottom = 184.112
theme = SubResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SFX" type="HSlider" parent="Control/conteiner3"]
margin_right = 78.0
margin_bottom = 16.0
size_flags_horizontal = 3
theme = SubResource( 10 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conteiner4" type="HBoxContainer" parent="Control"]
margin_left = 54.635
margin_top = 134.826
margin_right = 133.634
margin_bottom = 212.827
theme = SubResource( 14 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Master" type="HSlider" parent="Control/conteiner4"]
margin_right = 78.0
margin_bottom = 16.0
size_flags_horizontal = 3
theme = SubResource( 15 )
custom_styles/slider = SubResource( 16 )
custom_styles/grabber_area_highlight = SubResource( 17 )
custom_styles/grabber_area = SubResource( 18 )
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Control/conteiner2/Musica" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Control/conteiner3/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="Control/conteiner4/Master" to="." method="_on_Master_value_changed"]
